--- a/src/app/modules/payroll/payroll-run-log/payroll-run-log.component.html
+++ b/src/app/modules/payroll/payroll-run-log/payroll-run-log.component.html
@@ -1,1 +1,62 @@
-<p>payroll-run-log works!</p>
+<ngx-componentsheader [pageName]='pageName' >
+
+</ngx-componentsheader>
+
+<nb-card  *ngIf="showEmpty">
+    <nb-card-body>
+        <ngx-default-content pageHeader="Payroll Run Log"
+        pageDescription="No record found"  [loading]="loading"
+    >
+      </ngx-default-content>
+
+    </nb-card-body>
+</nb-card>  
+<nb-card *ngFor="let slip of PayrollRunList;let i = index" >
+    <nb-card-body>
+        <div style="display: flex;flex-direction: row; border-bottom: 0.800000011920929px solid #CED4DA;padding-bottom: 10px;">
+        <div style="flex:auto;">{{slip.refNo}}</div>
+        <div >
+            <div *ngIf="slip.log_status == 2" style="padding: 10px;width: max-content;background:rgba(0, 153, 74,0.1);color:rgba(0, 153, 74)">
+                Approved
+            </div>
+            <div *ngIf="slip.log_status == 1" style="padding: 10px;width: max-content;background:rgba(242, 153, 74,0.1);color:rgba(242, 153, 74)">
+                Pending
+            </div>
+            <div *ngIf="slip.log_status == 3" style="padding: 10px;width: max-content;background:rgba(242, 0, 74,0.1);color:rgba(242, 0, 74)">
+                Rejected
+            </div>
+        </div>
+        </div>
+        <div style="display: flex;flex-direction: row;">
+            <div style="flex:auto;">
+            <div style="display: flex;flex-direction: row;">
+            <div style="display: flex;flex-direction: column; padding: 10px;">
+            <label>Ref No</label>
+            <label>{{slip.refNo}}</label>
+            </div>
+
+            <div style="display: flex;flex-direction: column; padding: 10px;">
+                <label>Period</label>
+                <label>{{slip.periodStart | date: 'medium'}} - {{slip.periodEnd | date: 'medium'}}</label>
+                </div>
+            </div>
+            </div>
+            <div >
+                <div style="display: flex;flex-direction: row;">
+                <div style="padding: 10px;">
+                    <button  nbButton status='warning'  >View Details</button>
+       
+                </div>
+                <div style="padding: 10px;">
+                    <button nbButton status='primary'  >Payslip Analysis</button>
+       
+                </div>
+                <div style="padding: 10px;">
+                    <button  nbButton status='info'  >Payroll Analysis</button>
+       
+                </div>
+                </div>
+            </div>
+        </div>
+        </nb-card-body>
+        </nb-card>
