--- a/src/app/modules/payroll/payscaletable/payscaletable.component.html
+++ b/src/app/modules/payroll/payscaletable/payscaletable.component.html
@@ -1,5 +1,5 @@
 
-<ngx-componentsheader pageName='Pay Scale' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
+<ngx-componentsheader pageName='Payroll Type' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
 </ngx-componentsheader>
 
 <nb-card>
@@ -9,7 +9,7 @@
       >
         </ngx-default-content>
         <ngx-tablecomponent *ngIf="!showEmpty" (filterChange)="filterUpdated($event)" [showActions]="true"
-        [showFilter]="true" (actionClick)="tableActionClicked($event)" [actions]="tableActions" [userData]="data"
+        [showFilter]="true" (actionClick)="tableActionClicked($event)" [actions]="tableActions" [userData]="PayTypedata"
         [tableColum]="tableColumns" [totalItems]="totalItems" [currentPage]="currentPage" [loading]="loadingPayScale">
         </ngx-tablecomponent>
 
